--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "analog-clock-react": "^1.3.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
